// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders body component 1`] = `
<div
  class="body-wrapper"
  data-testid="sport-registration-body"
>
  <div
    class="body"
  >
    <div
      class="total-event"
    >
      <h1
        style="color: rgb(78, 108, 80);"
      >
        Total Events
      </h1>
      <div
        class="cardList"
      >
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Butterfly 100M
            </h3>
            <h4
              class="cardDescription"
            >
              Swimming
            </h4>
            <h4
              class="cardTime"
            >
              13-14
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Backstroke 100M
            </h3>
            <h4
              class="cardDescription"
            >
              Swimming
            </h4>
            <h4
              class="cardTime"
            >
              13-14
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Freestyle 400M
            </h3>
            <h4
              class="cardDescription"
            >
              Swimming
            </h4>
            <h4
              class="cardTime"
            >
              15-16
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              High Jump
            </h3>
            <h4
              class="cardDescription"
            >
              Athletics
            </h4>
            <h4
              class="cardTime"
            >
              13-14
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Triple Jump
            </h3>
            <h4
              class="cardDescription"
            >
              Athletics
            </h4>
            <h4
              class="cardTime"
            >
              16-17
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Long Jump
            </h3>
            <h4
              class="cardDescription"
            >
              Athletics
            </h4>
            <h4
              class="cardTime"
            >
              17-18
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              100M Sprint
            </h3>
            <h4
              class="cardDescription"
            >
              Athletics
            </h4>
            <h4
              class="cardTime"
            >
              17-18
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Lightweight 60kg
            </h3>
            <h4
              class="cardDescription"
            >
              Boxing
            </h4>
            <h4
              class="cardTime"
            >
              18-19
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Middleweight 75 kg
            </h3>
            <h4
              class="cardDescription"
            >
              Boxing
            </h4>
            <h4
              class="cardTime"
            >
              19-20
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
        <div
          class="card"
        >
          <img
            alt="altrenate-img"
            src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
          />
          <div
            class="cardLayout"
          >
            <h3
              class="cardTitle"
            >
              Heavyweight 91kg
            </h3>
            <h4
              class="cardDescription"
            >
              Boxing
            </h4>
            <h4
              class="cardTime"
            >
              20-22
            </h4>
            <button
              class="add-btn"
            >
              Select
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="vl"
    />
    <div
      class="selected-event"
    >
      <h1
        style="color: rgb(78, 108, 80);"
      >
        Selected Events
      </h1>
      <div
        class="cardList"
      />
    </div>
  </div>
</div>
`;

exports[`renders react component 1`] = `
<div
  class="App"
  data-testid="sport-registration"
>
  <div
    class="header"
  >
    <img
      alt="Alt"
      src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Sport_balls.svg/600px-Sport_balls.svg.png"
      style="width: 5%;"
    />
    <h1
      style="color: white;"
    >
       Sports Registraion Portal
    </h1>
  </div>
  <div
    class="body-wrapper"
    data-testid="sport-registration-body"
  >
    <div
      class="body"
    >
      <div
        class="total-event"
      >
        <h1
          style="color: rgb(78, 108, 80);"
        >
          Total Events
        </h1>
        <div
          class="cardList"
        >
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Butterfly 100M
              </h3>
              <h4
                class="cardDescription"
              >
                Swimming
              </h4>
              <h4
                class="cardTime"
              >
                13-14
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Backstroke 100M
              </h3>
              <h4
                class="cardDescription"
              >
                Swimming
              </h4>
              <h4
                class="cardTime"
              >
                13-14
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Freestyle 400M
              </h3>
              <h4
                class="cardDescription"
              >
                Swimming
              </h4>
              <h4
                class="cardTime"
              >
                15-16
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                High Jump
              </h3>
              <h4
                class="cardDescription"
              >
                Athletics
              </h4>
              <h4
                class="cardTime"
              >
                13-14
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Triple Jump
              </h3>
              <h4
                class="cardDescription"
              >
                Athletics
              </h4>
              <h4
                class="cardTime"
              >
                16-17
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Long Jump
              </h3>
              <h4
                class="cardDescription"
              >
                Athletics
              </h4>
              <h4
                class="cardTime"
              >
                17-18
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                100M Sprint
              </h3>
              <h4
                class="cardDescription"
              >
                Athletics
              </h4>
              <h4
                class="cardTime"
              >
                17-18
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Lightweight 60kg
              </h3>
              <h4
                class="cardDescription"
              >
                Boxing
              </h4>
              <h4
                class="cardTime"
              >
                18-19
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Middleweight 75 kg
              </h3>
              <h4
                class="cardDescription"
              >
                Boxing
              </h4>
              <h4
                class="cardTime"
              >
                19-20
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
          <div
            class="card"
          >
            <img
              alt="altrenate-img"
              src="https://thumbs.dreamstime.com/b/olympic-swimming-pool-under-water-background-underwater-swim-157395312.jpg"
            />
            <div
              class="cardLayout"
            >
              <h3
                class="cardTitle"
              >
                Heavyweight 91kg
              </h3>
              <h4
                class="cardDescription"
              >
                Boxing
              </h4>
              <h4
                class="cardTime"
              >
                20-22
              </h4>
              <button
                class="add-btn"
              >
                Select
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="vl"
      />
      <div
        class="selected-event"
      >
        <h1
          style="color: rgb(78, 108, 80);"
        >
          Selected Events
        </h1>
        <div
          class="cardList"
        />
      </div>
    </div>
  </div>
  <div
    class="footer"
  >
    <div
      style="color: white;"
    >
       Copyright 
      2023
    </div>
  </div>
</div>
`;
